fixed placeholder in create layer, added register and login link in view, fixed lists still visible in widget mode

--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -15,7 +15,7 @@
         // .white-text-shadow;
         transition: left 0.8s cubic-bezier(0.8, 0.04, 0.45, 0.98);
         &.wc-hide {
-            left: -(@widthMenuLeft + 32px);
+            left: -(2 * @widthMenuLeft + 44px);
             transition: left 0.8s cubic-bezier(0.8, 0.04, 0.45, 0.98);
         }
 
