--- a/styles/navigate.less
+++ b/styles/navigate.less
@@ -128,19 +128,3 @@
     }
 }
 
-.credit-waend {
-    .label;
-    width: 40px;
-    position: absolute;
-    bottom: 0px;
-    right: 0px;
-    text-align: right;
-
-    a{    
-        text-decoration: none;
-        color: #000;
-        &:hover {cursor: pointer;}
-        &:focus {outline: none;}
-    }
-    
-}
