--- a/styles/view.less
+++ b/styles/view.less
@@ -64,13 +64,13 @@
 }
 
 .credit-waend {
-    .label;
-    width: 40px;
+    font-size: 9pt;
+    text-transform: lowercase;
     position: absolute;
     bottom: 0px;
-    right: 0px;
+    right: 0px; 
     text-align: right;
-
+ 
     a{    
         text-decoration: none;
         color: #000;
