--- a/styles/wc.less
+++ b/styles/wc.less
@@ -178,7 +178,7 @@
         }
 
         &.wc-hide {
-            right: -200px;
+            right: -400px;
             transition: all 0.8s cubic-bezier(0.8, 0.04, 0.45, 0.98);
         }
 
